# Urb

./: .flake8  AUTH_FIXES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRESENTATION.md  README.md  check_system.py  main.py  pyproject.toml  requirements.txt  run.py  start_presentation.sh  test_auth.py  test_complete.py
Gestionnaire de tâches/: main.py
Gestionnaire de tâches/domain/: task_entity.py
Gestionnaire de tâches/domain/Domaine/use_case/infrastructure/: create_task.py  task_repository.py
Gestionnaire de tâches/infrastructure/routes/: task_routes.py
Gestionnaire_de_taches/: main.py
Gestionnaire_de_taches/infrastructure/: task_repository.py
Gestionnaire_de_taches/use_cases/: create_task.py
src/: app_config.py  models.py  routes.py
src/core/: entities.py  interfaces.py  use_cases.py
src/infrastructure/: database.py  repositories.py
src/presentation/: __init__.py  controllers.py  views.py
static/: api_helper.js  app.js  auth.js  index.html  style.css
templates/: index.html
tests/: test_core.py  test_infrastructure.py  test_presentation.py
